--- a/transport-persoane.html
+++ b/transport-persoane.html
@@ -7,28 +7,44 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Your description" />
-    <meta name="author" content="Your name" />
+ <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Transport persoane Germania,Olanda,Belgia - Europa transport persoane"
+    />
+    <meta name="application-name" content="europatransportpersoane" />
+    <meta
+      name="keywords"
+      content="Europa transport persoane,transport persoane romania germania,transport persoane romania olanda,transport persoane romania belgia,transport persoane germania,transport persoane olanda,transport persoane belgia,firme de transport persoane"
+    />
+    <meta
+      name="creator"
+      content="europatransportpersoane.com"
+   />
+   <meta name="author" content="Europa Transport Persoane">
+      <meta property="og:site_name" content="https://europatransportpersoane.com"/>
 
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="" />
     <!-- website name -->
-    <meta property="og:site" content="" />
+    <meta property="og:site" content="https://europatransportpersoane.com" />
     <!-- website link -->
-    <meta property="og:title" content="" />
+    <meta
+      property="og:title"
+      content="Transport persoane Romania Olanda,Belgia,Germania"
+    />
     <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="" />
-    <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="" />
+    <meta
+      property="og:description"
+      content="Transport persoane Romania Olanda,Belgia,Germania"
+    />
+    <meta property="og:image" content="https://europatransportpersoane.com/images/europa-transport-persoane-logo.png">
     <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://europatransportpersoane.com" />
     <!-- where do you want your post to link to -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <!-- to have large image post format in Twitter -->
 
-    <!-- Webpage Title -->
-    <title>Rute transport persoane Romania,Germania,Belgia,Olanda</title>
+    <!-- Website Title -->
+    <title>Rute transport persoane international - Europa transport persoane</title>
+
+
 
     <!-- Styles -->
     <link
