add sitemap and robots.txt

--- a/transport-persoane.html
+++ b/transport-persoane.html
@@ -100,7 +100,7 @@
           </ul>
           <span class="nav-item social-icons">
             <span class="fa-stack">
-              <a href="">
+              <a href="https://www.facebook.com/Europa-transport-persoane-101023965829982">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x"></i>
               </a>
@@ -344,7 +344,7 @@
             <!-- end of footer-col -->
             <div class="footer-col third">
               <span class="fa-stack">
-                <a href="">
+                <a href="https://www.facebook.com/Europa-transport-persoane-101023965829982">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x"></i>
                 </a>
