--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <!--Microsoft Clarity-->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "adhbgxw5za");
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-218605859-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-218605859-1');
+</script>
+
 
     <!-- SEO Meta Tags -->
     <meta
@@ -139,7 +158,7 @@
               <h2 style="margin-bottom: 50px; color: white" class="h2-large">
                 România Germania Olanda Belgia
               </h2>
-              <p style="color:white;"><a style="color: #ff914d" href="https://europatransportpersoane.com">EUROPA TRANSPORT PERSOANE</a> zilnic de la adresa la adresa pe ruta Romania Germania Olanda si Belgia, iar cel mai important lucru este siguranta,oferim siguranta si rapiditate, fara transferuri si opriri.</p>
+              <p style="color:white;"><a style="color: #ff914d"  href="https://europatransportpersoane.com">EUROPA TRANSPORT PERSOANE</a> zilnic de la adresa la adresa pe ruta Romania Germania Olanda si Belgia, iar cel mai important lucru este siguranta,oferim siguranta si rapiditate, fara transferuri si opriri.</p>
               <a class="btn-solid-lg" href="tel:+40741208470">+40 741 208 470 </a>
             </div>
             <!-- end of col -->
