--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
   gtag('config', 'UA-218605859-1');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N5BQVSM');</script>
+<!-- End Google Tag Manager -->
 
 
     <!-- SEO Meta Tags -->
@@ -84,6 +91,10 @@
     <link rel="icon" href="images/europa-transport-persoane-logo.png" />
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbarExample">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5BQVSM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
  
     <!-- Navigation -->
     <nav
