--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           ><p style="font-weight: bold;color:white">EUROPA TRANSPORT PERSOANE</p></a>
 
         <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
+        <!-- <a class="navbar-brand logo-text" href="index.html">Des</a> -->
 
         <button
           class="navbar-toggler p-0 border-0"
