--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- where do you want your post to link to -->
 
     <!-- Website Title -->
-    <title>Transport persoane plecari zilnice Romania Germania,Olanda si Belgia</title>
+    <title>Transport persoane Romania Germania,Olanda,Belgia</title>
 
 
 
