--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     />
     <meta
       name="creator"
-      content="europatransportpersoane.com"
+      content="europatransport-persoane.com"
    />
    <meta name="author" content="Europa Transport Persoane">
-      <meta property="og:site_name" content="https://europatransportpersoane.com"/>
+      <meta property="og:site_name" content="https://europatransport-persoane.com"/>
 
     <!-- website name -->
-    <meta property="og:site" content="https://europatransportpersoane.com" />
+    <meta property="og:site" content="https://europatransport-persoane.com" />
     <!-- website link -->
     <meta
       property="og:title"
@@ -62,9 +62,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       property="og:description"
       content="Transport persoane Romania Olanda,Belgia,Germania"
     />
-    <meta property="og:image" content="https://europatransportpersoane.com/images/europa-transport-persoane-logo.png">
+    <meta property="og:image" content="https://europatransport-persoane.com/images/europa-transport-persoane-logo.png">
     <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="https://europatransportpersoane.com" />
+    <meta property="og:url" content="https://europatransport-persoane.com" />
     <!-- where do you want your post to link to -->
 
     <!-- Website Title -->
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2 style="margin-bottom: 50px; color: white" class="h2-large">
                 România Germania Olanda Belgia
               </h2>
-              <p style="color:white;"><a style="color: #ff914d"  href="https://europatransportpersoane.com">EUROPA TRANSPORT PERSOANE</a> zilnic de la adresa la adresa pe ruta Romania Germania Olanda si Belgia, iar cel mai important lucru este siguranta,oferim siguranta si rapiditate, fara transferuri si opriri.</p>
+              <p style="color:white;"><a style="color: #ff914d"  href="https://europatransport-persoane.com">EUROPA TRANSPORT PERSOANE</a> zilnic de la adresa la adresa pe ruta Romania Germania Olanda si Belgia, iar cel mai important lucru este siguranta,oferim siguranta si rapiditate, fara transferuri si opriri.</p>
               <a class="btn-solid-lg" href="tel:+40741208470">+40 741 208 470 </a>
             </div>
             <!-- end of col -->
