--- a/transport-persoane.html
+++ b/transport-persoane.html
@@ -19,13 +19,13 @@
     />
     <meta
       name="creator"
-      content="europatransportpersoane.com"
+      content="europatransport-persoane.com"
    />
    <meta name="author" content="Europa Transport Persoane">
-      <meta property="og:site_name" content="https://europatransportpersoane.com"/>
+      <meta property="og:site_name" content="https://europatransport-persoane.com"/>
 
     <!-- website name -->
-    <meta property="og:site" content="https://europatransportpersoane.com" />
+    <meta property="og:site" content="https://europatransport-persoane.com" />
     <!-- website link -->
     <meta
       property="og:title"
@@ -36,9 +36,9 @@
       property="og:description"
       content="Transport persoane Romania Olanda,Belgia,Germania"
     />
-    <meta property="og:image" content="https://europatransportpersoane.com/images/europa-transport-persoane-logo.png">
+    <meta property="og:image" content="https://europatransport-persoane.com/images/europa-transport-persoane-logo.png">
     <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="https://europatransportpersoane.com" />
+    <meta property="og:url" content="https://europatransport-persoane.com" />
     <!-- where do you want your post to link to -->
 
     <!-- Website Title -->
